--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,6 @@
          version="3.1">
 <error-page>
     <error-code>404</error-code>
-    <location>/WEB-INF/pages/404.jsp</location>
+    <location>/pages/404.jsp</location>
 </error-page>
 </web-app>
